--- a/android/app/src/prd/res/values/values.xml
+++ b/android/app/src/prd/res/values/values.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Buyer</string>
+    <string name="app_name">ONDC Reference Buyer App</string>
 </resources>
