--- a/android/app/src/staging/res/values/values.xml
+++ b/android/app/src/staging/res/values/values.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Buyer Staging</string>
+    <string name="app_name">SAARTHI Staging</string>
 </resources>
